Bug 412182 - Missing date for new articles
Summary: Missing date for new articles
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 412209 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-09-22 08:12 UTC by Christophe Marin
Modified: 2019-09-23 05:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2019-09-22 08:12:27 UTC
Using master.

Reverting 19e86d1b solves the issue

Symptom: date/time for new articles are empty with this commit.

Tested:
Renaming ~/.local/share/akregator and starting akregator is enough.
Comment 1 Christophe Marin 2019-09-22 18:59:46 UTC
*** Bug 412209 has been marked as a duplicate of this bug. ***
Comment 2 Laurent Montel 2019-09-23 05:01:39 UTC
Git commit 6d185fb8600860672973b62dbc688f9544ad24c2 by Laurent Montel.
Committed on 23/09/2019 at 05:01.
Pushed by mlaurent into branch 'master'.

Fix Bug 412182 - Missing date for new articles

M  +1    -1    src/article.cpp

https://commits.kde.org/akregator/6d185fb8600860672973b62dbc688f9544ad24c2