Fix Bug 412182 - Missing date for new articles

BUG: 412182