src/article.cpp
@@ -206,7 +206,7 @@ Article::Private::Private(const ItemPtr &article, Feed *feed_, Backend::FeedStor
         archive->setGuidIsHash(guid, guid.startsWith(QLatin1String("hash:")));
         const time_t datePublished = article->datePublished();
         if (datePublished > 0) {
-            pubDate.QDateTime::fromSecsSinceEpoch(datePublished);
+            pubDate = QDateTime::fromSecsSinceEpoch(datePublished);
         } else {
             pubDate = QDateTime::currentDateTime();
         }
